zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__vttest8_4.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (C): AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA                                                         
01 (C): BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB                                                         
02 (C): CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC                                                         
03 (C): The right column should be staggered                                                         
04 (C): by one.  Push <RETURN>EEEEEEEEEEEEE                                                         
05 (C): FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF                                                         
06 (C): GGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGG                                                         
07 (C): HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH                                                         
08 (C): IIIIIIIIIIIIIIIIIIIIIIIIIIIIIII                                                         
09 (C): JJJJJJJJJJJJJJJJJJJJJJJJJJJJJJ                                                         
10 (C): KKKKKKKKKKKKKKKKKKKKKKKKKKKKK                                                         
11 (C): LLLLLLLLLLLLLLLLLLLLLLLLLLLL                                                         
12 (C): MMMMMMMMMMMMMMMMMMMMMMMMMMM                                                         
13 (C): NNNNNNNNNNNNNNNNNNNNNNNNNN                                                         
14 (C): OOOOOOOOOOOOOOOOOOOOOOOOO                                                         
15 (C): PPPPPPPPPPPPPPPPPPPPPPPP                                                         
16 (C): QQQQQQQQQQQQQQQQQQQQQQQ                                                         
17 (C): RRRRRRRRRRRRRRRRRRRRRR                                                         
18 (C): SSSSSSSSSSSSSSSSSSSSS                                                         
19 (C): TTTTTTTTTTTTTTTTTTTT                                                         
20 (C): UUUUUUUUUUUUUUUUUUU                                                         
21 (C): VVVVVVVVVVVVVVVVVV                                                         
22 (C): WWWWWWWWWWWWWWWWW                                                         
23 (C): XXXXXXXXXXXXXXXX                                                         
24 (C):                                                                                                  
25 (C):                                                                                                  
26 (C):                                                                                                  
27 (C):                                                                                                  
28 (C):                                                                                                  
29 (C):                                                                                                  
30 (C):                                                                                                  
31 (C):                                                                                                  
32 (C):                                                                                                  
33 (C):                                                                                                  
34 (C):                                                                                                  
35 (C):                                                                                                  
36 (C):                                                                                                  
37 (C):                                                                                                  
38 (C):                                                                                                  
39 (C):                                                                                                  
40 (C):                                                                                                  
41 (C):                                                                                                  
42 (C):                                                                                                  
43 (C):                                                                                                  
44 (C):                                                                                                  
45 (C):                                                                                                  
46 (C):                                                                                                  
47 (C):                                                                                                  
48 (C):                                                                                                  
49 (C):                                                                                                  
50 (C):                                                                                                  

