zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__vttest8_5.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (C): If your terminal has the ANSI 'Insert Character' function                                        
01 (C): (the VT102 does not), then you should see a line like this                                       
02 (C):   A B C D E F G H I J K L M N O P Q R S T U V W X Y Z                                            
03 (C): below:                                                                                           
04 (C):                                                                                                  
05 (C):   A B C D E F G H I J K L M N O P Q R S T U V W X Y Z                                            
06 (C):                                                                                                  
07 (C):                                                                                                  
08 (C):                                                                                                  
09 (C): Push <RETURN>                                                                                    
10 (C):                                                                                                  
11 (C):                                                                                                  
12 (C):                                                                                                  
13 (C):                                                                                                  
14 (C):                                                                                                  
15 (C):                                                                                                  
16 (C):                                                                                                  
17 (C):                                                                                                  
18 (C):                                                                                                  
19 (C):                                                                                                  
20 (C):                                                                                                  
21 (C):                                                                                                  
22 (C):                                                                                                  
23 (C):                                                                                                  
24 (C):                                                                                                  
25 (C):                                                                                                  
26 (C):                                                                                                  
27 (C):                                                                                                  
28 (C):                                                                                                  
29 (C):                                                                                                  
30 (C):                                                                                                  
31 (C):                                                                                                  
32 (C):                                                                                                  
33 (C):                                                                                                  
34 (C):                                                                                                  
35 (C):                                                                                                  
36 (C):                                                                                                  
37 (C):                                                                                                  
38 (C):                                                                                                  
39 (C):                                                                                                  
40 (C):                                                                                                  
41 (C):                                                                                                  
42 (C):                                                                                                  
43 (C):                                                                                                  
44 (C):                                                                                                  
45 (C):                                                                                                  
46 (C):                                                                                                  
47 (C):                                                                                                  
48 (C):                                                                                                  
49 (C):                                                                                                  
50 (C):                                                                                                  

