zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__wide_characters.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (C): Welcome to fish, the friendly interactive shell                                                         
01 (C): ⋊> ~/c/zellij on main ⨯ ＨＨＨＨＨＨＨ                                                          15:19:10

