zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__wrap_wide_characters_on_size_change.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (W): Ｈ
01 (C): ｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅ
02 (W): ｅ
03 (C): ｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌ
04 (W): ｌ
05 (C): ｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌ
06 (W): ｌ
07 (C): ｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏ
08 (W): ｏ
09 (C): ＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨ
10 (W): Ｈ
11 (C): ｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅ
12 (W): ｅ
13 (C): ｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌ
14 (W): ｌ
15 (C): ｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌ
16 (W): ｌ
17 (C): ｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏ
18 (W): ｏ
19 (C): 
20 (C): 

